# ip-adapter-palette

./: .gitignore  LICENSE  README.md  pyproject.toml
configs/done/: 02-px-trsf-1-layer-uncond-1.0.toml  bw-img-emb-200db-uncond-1.0.toml  finetune-color-palette-mlp-weighted.toml  finetune-random-ip-adapter.toml  finetune-text-ip-adapter.toml  img-emb-200db-uncond-1.0.toml  img-emb-diff-200db-uncond-1.0.toml  overfit-spatial-encoder-no-rescaler.toml  overfit-spatial-encoder-with-text-emb.toml  overfit-unweighted-palette.toml  rnd-clip-like-loss-uncond-0.0.toml  rnd-clip-like-loss-uncond-1.0.toml  rnd-clip-like-loss.toml  rnd-emb-200db-uncond-0.1.toml  rnd-emb-200db-uncond-1.0.toml  rnd-long-resized-to-16-0-layer-uncond-1.0.toml  rnd-long-uncond-1.0.toml  rnd-long8-trsf-slice-16-2-layer-uncond-1.0.toml  rnd-long8-trsf-slice-16-4-layer-uncond-1.0.toml  rnd-uncond-1.0-no-layer copy.toml  txt-emb-200db-uncond-1.0.toml
configs/scheduled/: 00-px-no-layer-uncond-1.0.toml  01-px-mlp-1-layer-uncond-1.0.toml  02-px-trsf-1-layer-uncond-1.0.toml  bw-img-emb-200db-uncond-0.0.toml  finetune-color-palette-mlp-weighted.toml  finetune-text-ip-adapter.toml  img-emb-200db-uncond-0.5.toml  overfit-pix-sampling-2-layer-mlp.toml  overfit-spatial-encoder.toml  overfit-unweighted-palette.toml  rnd-long-resized-to-16-0-layer-uncond-1.0.toml  rnd-long-resized-to-16-1-layer-uncond-1.0.toml  rnd-long8-trsf-slice-16-1-layer-uncond-1.0.toml  rnd-long8-trsf-slice-16-2-layer-uncond-1.0.toml  rnd-uncond-1.0.toml  (+2 more)
scripts/: precompute.py  scheduler-remote.bash  study_text_emb_len.py  train.py  trainer.py
tests/: test_color_palette.py  test_histogram.py  test_histogram_auto_encoder.py  test_pixel_sampling.py  test_spatial_encoder.py
weights/: .gitignore
(+34 files in other folders)
